Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56600

easing.type on specific ColorAnimation/PropertyAnimation triggers ununderstandable error

    XMLWordPrintable

Details

    Description

      easing.type on specific ColorAnimation/PropertyAnimation triggers ununderstandable error : "Property assignment expected" on the easing.type line

      To reproduce :

      import QtQuick 2.0
      import QtQuick.Window 2.0
      
      Window {
          visible: true
          width: 640
          height: 480
          id: root
      
          Rectangle {
              id: outLed
              width: height
              height: parent.height / 2
              radius: width / 2
      
              color: "darkgray"
      
              ColorAnimation on color {
                  id: colorAnimOut
                  from: "Red"
                  to: "darkgray"
                  duration: 250
      
                  easing.type: Easing.InOutQuad
              }
          }
      }
      

      Attachments

        For Gerrit Dashboard: QTBUG-56600
        # Subject Branch Project Status CR V

        Activity

          People

            shausman Simon Hausmann
            AlGrenadine Alexandre GRANVAUD
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes