tests/auto/qml/qqmllanguage/tst_qqmllanguage.cpp
@@ -38,6 +38,7 @@
 #include <QFont>
 #include <QQmlFileSelector>
 #include <QFileSelector>
+#include <QEasingCurve>
 
 #include <private/qqmlproperty_p.h>
 #include <private/qqmlmetatype_p.h>
@@ -282,6 +283,8 @@ private slots:
     void lowercaseTypeNames();
 
     void thisInQmlScope();
+
+    void valueTypeGroupPropertiesInBehavior();
 
 private:
     QQmlEngine engine;
@@ -4924,6 +4927,20 @@ void tst_qqmllanguage::thisInQmlScope()
     QVERIFY(!o.isNull());
     QCOMPARE(o->property("x"), QVariant(42));
     QCOMPARE(o->property("y"), QVariant(42));
+}
+
+void tst_qqmllanguage::valueTypeGroupPropertiesInBehavior()
+{
+    QQmlEngine engine;
+    QQmlComponent component(&engine, testFileUrl("groupPropertyInPropertyValueSource.qml"));
+    VERIFY_ERRORS(0);
+    QScopedPointer<QObject> o(component.create());
+    QVERIFY(!o.isNull());
+
+    QObject *animation = qmlContext(o.data())->contextProperty("animation").value<QObject*>();
+    QVERIFY(animation);
+
+    QCOMPARE(animation->property("easing").value<QEasingCurve>().type(), QEasingCurve::InOutQuad);
 }
 
 QTEST_MAIN(tst_qqmllanguage)
